perf(core): streamline trading hot paths